@@ -18,6 +18,7 @@
 #pragma warning (disable: 4505) // unreferenced local function has been removed
 #endif
 
+// Our state
 static bool show_demo_window = true;
 static bool show_another_window = false;
 static ImVec4 clear_color = ImVec4(0.45f, 0.55f, 0.60f, 1.00f);
@@ -105,6 +106,7 @@ int main(int argc, char** argv)
     glutDisplayFunc(glut_display_func);
 
     // Setup Dear ImGui context
+    IMGUI_CHECKVERSION();
     ImGui::CreateContext();
     ImGuiIO& io = ImGui::GetIO(); (void)io;
     //io.ConfigFlags |= ImGuiConfigFlags_NavEnableKeyboard;     // Enable Keyboard Controls
